# minesweeper-sdl

./: .clang-format  .gitignore  Button.h  CMakeCache.txt  CMakeLists.txt  Component.h  Footer.h  Globals.h  Grid.h  Image.cpp  Image.h  MainMenu.h  Makefile  QuitButton.h  Rectangle.h  Shapes.h  Sidebar.h  Text.h  UI.h  UserEvents.h  Window.h  cmake_install.cmake  main.cpp
Engine/: Button.cpp  Button.h  Column.cpp  Column.h  EventReceiver.h  Image.cpp  Image.h  Layout.h  Random.h  Rectangle.cpp  Rectangle.h  Row.cpp  Row.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h  Window.cpp  Window.h
Engine/Layout/: Box.h  Button.h  Color.h  HandleEventStrategy.h  RectangleUnit.h  RenderStrategy.h
Engine_DO/: Entity.cpp  Entity.h  EntityID.h  EntityManager.cpp  EntityManager.h  Image.cpp  Image.h  TTFManager.cpp  TTFManager.h  Text.cpp  Text.h  World.cpp  World.h  WorldImpl.cpp  WorldImpl.h
MS_DO/: GameLoop.cpp  GameLoop.h  TextureAtlas.cpp  TextureAtlas.h
Minesweeper/: Cell.cpp  Cell.h  DifficultyLabel.cpp  DifficultyLabel.h  DifficultySwitch.cpp  DifficultySwitch.h  FlagCounter.cpp  FlagCounter.h  GameSettings.cpp  GameSettings.h  Grid.cpp  Grid.h  MinesweeperAtlas.cpp  MinesweeperAtlas.h  NewGameButton.cpp  NewGameButton.h  UI.cpp  UI.h
Minesweeper/CompositionUIElements/: FlagCounter.h  FlagCounterRenderStrategy.h
